ver 0.24.1 (not yet released)
* output
  - sndio: fix rounding error in volume calculation
* log: include year in time stamp
* fix build failure in the "id3tag" Meson subproject

ver 0.24 (2025/03/11)
* protocol
  - new command "searchcount" (case-insensitive "count")
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
  - allow range in "playlistmove"
  - "save" can append to or replace an existing playlist
  - filter "prio" (for "playlistfind"/"playlistsearch")
  - limit "player" idle events to the current partition
  - operator "starts_with"
  - show PCRE support in "config" response
  - apply Unicode normalization to case-insensitive filter expressions
  - stickers on playlists and some tag types
  - new commands "stickernames", "stickertypes", "stickernamestypes", "playlistlength", "searchplaylist", "protocol"
  - new "search"/"find" filter "added-since"
  - allow range in listplaylist and listplaylistinfo
  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt", "gt", "contains" and "starts_with"
  - consume only idle flags that were subscribed to
  - volume command is no longer deprecated
  - new "available" and "reset" subcommands for tagtypes
  - searching stored playlists respond now with song position
  - new sticker subcommand "inc" and "dec"
* database
  - attribute "added" shows when each song was added to the database
  - proxy: require MPD 0.21 or later
  - proxy: require libmpdclient 2.15 or later
* archive
  - add option to disable archive plugins in mpd.conf
* storage
  - curl: optimize database update
  - nfs: require libnfs 4.0 or later
  - nfs: support libnfs 6 (API version 2)
  - nfs: support libnfs URL arguments
* input
  - alsa: limit ALSA buffer time to 2 seconds
  - alsa: set up a channel map
  - alsa: support the alsa-lib 1.2.11 API
  - alsa: add option "close_on_pause"
  - curl: add "connect_timeout" configuration
* decoder
  - ffmpeg: require FFmpeg 4.0 or later